# coffee_backend

./: .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  Readme.md  pyproject.toml  sonar-project.properties
.tekton/: pipelineRun_pvc_template.yaml
coffee_backend/: __main__.py  application.py  main.py  settings.py
coffee_backend/api/: __init__.py  authorization.py  deps.py  health.py  security.py
coffee_backend/api/v1/: __init__.py  coffee_drink_image.py  coffee_drinks.py  coffee_image.py  coffee_images.py  coffees.py  drink_images.py  drinks.py  ratings.py
coffee_backend/config/: log_filter.py  origins.py
coffee_backend/exceptions/: exceptions.py
coffee_backend/metrics/: __init__.py  daily_active_users.py
coffee_backend/mongo/: coffee.py  database.py  drink.py  rating.py
coffee_backend/s3/: object.py
coffee_backend/s3/types/: readable.py
coffee_backend/schemas/: __init__.py  coffee.py  drink.py  health.py  image.py  rating.py  rating_summary.py
coffee_backend/services/: coffee.py  coffee_image.py  drink.py  image_service.py  rating.py
coffeebackend/: __main__.py
devservices/: compose.yml
devservices/realms/: coffee-app-realm.json
devservices/themes/coffee-app/account/: theme.properties
image_resize/: pyproject.toml
image_resize/resize/: __main__.py  main.py
image_resize/resize/kafka/: consumer.py
scripts/: lint.sh  test.sh
stubs/uuid_extensions/: uuid7.pyi
test/schemas/: test_coffee.py
tests/: conftest.py  docker-compose.yml
tests/api/: conftest.py  test_authorization.py  test_health.py  test_security.py
tests/api/v1/: test_coffee_get_coffee_id.py  test_coffee_patch_coffees.py  test_coffees.py  test_coffees_get_coffees.py  test_coffees_post_coffees.py
tests/api/v1/coffee/: test_coffee_delete_coffee_id.py  test_coffee_get_coffees_id.py  test_coffee_get_coffees_ids.py  test_coffee_patch_coffees.py  test_coffees_get_coffees.py  test_coffees_post_coffees.py
tests/metrics/: test_daily_active_users.py
tests/mongo/: test_coffee.py  test_coffee_create.py  test_coffee_delete.py  test_coffee_find.py  test_coffee_read.py  test_coffee_read_all.py  test_coffee_read_by_id.py  test_coffee_update.py  test_crud.py
tests/mongo/coffee/: conftest.py  test_coffee_aggregate_read.py  test_coffee_create.py  test_coffee_delete.py  test_coffee_read.py  test_coffee_update.py
tests/mongo/drink/: test_drink_aggregate_read.py  test_drink_create.py  test_drink_delete.py  test_drink_delete_many.py  test_drink_read.py  test_drink_update.py
tests/mongo/rating/: test_rating_create.py  test_rating_delete.py  test_rating_delete_many.py  test_rating_read.py  test_rating_update.py
tests/s3/: conftest.py  test_object.py
tests/schemas/: test_coffee.py  test_create_coffee.py  test_drink.py  test_rating.py  test_rating_summary.py  test_update_coffee.py
tests/services/: test_coffee_create.py  test_coffee_get_by_id.py  test_coffee_list.py  test_coffee_list_ids.py
tests/services/coffee/: test_coffee_create.py  test_coffee_delete_by_id.py  test_coffee_get_by_id.py  test_coffee_list_ids.py  test_coffee_list_with_rating_summary.py  test_coffee_patch.py
tests/services/coffee_image/: test_coffee_image_create.py  test_coffee_image_delete.py  test_coffee_image_read.py
tests/services/drink/: test_drink_create.py  test_drink_delete_by_coffee_id.py  test_drink_delete_by_id.py  test_drink_get_by_id.py  test_drink_list.py  test_drink_with_coffee_bean_information.py
tests/services/image/: test_image_create.py  test_image_delete.py  test_image_read.py
tests/services/rating/: test_coffee_get_by_id.py  test_rating_create.py  test_rating_delete_by_coffee_id.py  test_rating_delete_by_id.py  test_rating_list.py  test_rating_summary_create.py  test_ratings_list_ids.py
(+17 files in other folders)
