[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["aguentner <45008199+andifg@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^1.10.5"
pymongo = "^4.3.3"
motor = "^3.1.1"
asyncio = "^3.4.3"
fastapi = "^0.95.0"
uvicorn = "^0.22.0"
httpx = "^0.24.0"
uuid7 = "^0.1.0"
minio = "^7.1.16"
python-multipart = "^0.0.6"
pyjwt = "^2.8.0"
cryptography = "^41.0.4"
aiohttp = "3.9.3"

[tool.poetry.group.dev.dependencies]
pylint-pytest = "^1.1.7"
pylint = "^3.2.2"
mypy = "^1.10.0"
isort = "^5.13.2"
pytest-docker = "^3.1.1"
pytest-asyncio = "^0.23.7"
pytest-aiohttp = "^1.0.5"
pylint-pydantic = "^0.3.2"
pytest-cov = "^5.0.0"
faker = "^25.2.0"
black = "^24.4.2"
aioresponses = "^0.7.6"


[tool.pytest.ini_options]
addopts = "--cov-report term-missing --cov=coffee_backend"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
line_length = 80
profile = "black"

[tool.black]
line-length = 80

[tool.mypy]
mypy_path="stubs"