[tool.poetry]
name = "resize"
version = "0.1.0"
description = ""
authors = ["anixel <45008199+andifg@users.noreply.github.com>"]
readme = "Readme.md"

[tool.poetry.dependencies]
python = "^3.11"
kafka-python = "^2.0.2"
confluent-kafka = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
